--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ pandas = "^2.2.3"
 tabulate = "^0.9.0"
 matplotlib = "^3.10.1"
 seaborn = "^0.13.2"
+smolagents = "^1.9.2"
+litellm = "^1.61.20"
+google-api-python-client = "^2.162.0"
 
 [build-system]
 requires = ["poetry-core"]
