--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ ruff = "^0.9.9"
 pydantic = "^2.10.6"
 pygithub = "^2.6.1"
 gitpython = "^3.1.44"
+pyright = "^1.1.396"
 
 [build-system]
 requires = ["poetry-core"]
