--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ gitpython = "^3.1.44"
 pyright = "^1.1.396"
 names-generator = "^0.2.0"
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
