--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pygithub = "^2.6.1"
 gitpython = "^3.1.44"
 pyright = "^1.1.396"
 names-generator = "^0.2.0"
+tenacity = "^9.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
