--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ gitpython = "^3.1.44"
 pyright = "^1.1.396"
 names-generator = "^0.2.0"
 tenacity = "^9.0.0"
+nbqa = {extras = ["toolchain"], version = "^1.9.1"}
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
