--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ pyright = "^1.1.396"
 names-generator = "^0.2.0"
 tenacity = "^9.0.0"
 nbqa = {extras = ["toolchain"], version = "^1.9.1"}
+google-cloud-aiplatform = "^1.84.0"
+xmltodict = "^0.14.2"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
