Working on randoop

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ tenacity = "^9.0.0"
 nbqa = {extras = ["toolchain"], version = "^1.9.1"}
 google-cloud-aiplatform = "^1.84.0"
 xmltodict = "^0.14.2"
+lxml = "^5.3.2"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
