changing dir names

--- a/data/migration_datasets/medium_dataset.yaml
+++ b/data/migration_datasets/medium_dataset.yaml
@@ -1,98 +1,100 @@
-- commit: 628b2cc0f09eb30bbfb402a1eb4f4d9aae3b7520
-  repo_name: lurenha/blogSpringBoot
-- commit: af775bab85e873e839c0e36f71c9dfcb830b54b2
-  repo_name: monitorjbl/excel-streaming-reader
-- commit: 7610a48d9ee7d1b8af2bb5451cf9e2860318cebb
-  repo_name: crossoverJie/distributed-redis-tool
-- commit: 50761c6900dbe1a3a2b955e874b16bee2ed87748
-  repo_name: wenweihu86/raft-java
-- commit: 08c440d3b58b5605b3bb357e679ca6c05f751900
-  repo_name: grpc-swagger/grpc-swagger
-- commit: 61b878e5cf6a6c6dcb66a27dbeaa47b746364f97
-  repo_name: he2121/MyRPCFromZero
-- commit: d31b13a0c01ce8012c969b59623811f7df614313
-  repo_name: yangxiufeng666/Micro-Service-Skeleton
-- commit: b3f6ea40869cff403039e70b25f049193b8946a0
-  repo_name: piomin/sample-spring-microservices
-- commit: efd0d2407acac5d7970cd915dbf114f76ccb024f
-  repo_name: commoncrawl/news-crawl
-- commit: dd3bed4d43c3812fa6fa3001adb08ec8b7717e68
-  repo_name: kingschan1204/istock
-- commit: 98bbc1a6e03f8cb44f00e7505f0e29bccef87abf
-  repo_name: iipc/openwayback
-- commit: d345d2d45c75b0694b562b6c346f8594f3a5d166
-  repo_name: soabase/exhibitor
-- commit: 82d154a53f4089fecfb9f320caad826bb4f6055f
-  repo_name: rancher/cattle
-- commit: 63152c49c71ad8121bda6e9a03a7ba7dc39ae52c
-  repo_name: Qbian61/forum-java
-- commit: 05b46e61b16588dbea0c5cf4018996e595cac99e
-  repo_name: imagej/imagej2
-- commit: 1424b0214b7eb13f77074683a4d8c6c666f363e7
-  repo_name: ninjaframework/ninja
-- commit: aeed56ee4bc1ddb1682d2d8df0847dca112176d7
-  repo_name: alibaba/metrics
-- commit: f42ab99ccc031bca7db6cf69aec70771d65799e1
-  repo_name: apache/cassandra-java-driver
-- commit: cc23ca4a9a6f342f597762415a0eb454b31ae295
-  repo_name: baichengzhou/SpringMVC-Mybatis-shiro
-- commit: eec7d3a878d35201082883c7378341e5497fb4e3
-  repo_name: anjia0532/unidbg-boot-server
-- commit: 7d78be3cab526501ad876495862f4cec108da2af
-  repo_name: opengoofy/hippo4j
-- commit: c10defe2d3f44327495ffde0b1ab05470a8f1453
-  repo_name: khoubyari/spring-boot-rest-example
-- commit: 7fe633e28331ea6d2e448f628d25e51084bd325c
-  repo_name: scxwhite/hera
-- commit: e6be66ae90243f75f6593fd3c6fd087665fea9cc
-  repo_name: zc-zh-001/ShadowSocks-Share
-- commit: 4379cce848af96997a9d7ef91d594aa129be8d71
-  repo_name: seaswalker/spring-analysis
-- commit: 8d84959f3172a1d048cf9db27aec646971c569b1
-  repo_name: v5tech/oltu-oauth2-example
-- commit: a94a4d9af6c25d40e1108729974c35c27c54441c
-  repo_name: Stratio/cassandra-lucene-index
-- commit: 4801196cf569f09ed93bb4b6d344351f2225b38e
-  repo_name: zykzhangyukang/Xinguan
-- commit: 6ef370c1116bdc617578d496d5d0a578da736084
-  repo_name: jwpttcg66/NettyGameServer
-- commit: 402b67e0ab54d15278aed356a57877924e9a5656
-  repo_name: tonybase/netty-chat
-- commit: 6068dc806bfa878c1a4e21058401beb43e61c488
-  repo_name: zheludkovm/LinuxJavaFixes
-- commit: b561c409ae455f13f38556fabb6656825ffb7e2e
-  repo_name: larsga/Duke
-- commit: 7eb89756295453dd3e6c2e3b0c680a92487dfbb6
-  repo_name: yeecode/EasyRPC
-- commit: e4c867a32a52cab1f01bb598bafb2820113fc446
-  repo_name: WeBankFinTech/Exchangis
-- commit: ba5a8b41e460839aabb5449aeb7e7e06f1eaf912
-  repo_name: Blazebit/blaze-persistence
-- commit: 020a0b3b6fdad00b9a431ce0462091eebf733fee
-  repo_name: lingfengsan/MillionHero
-- commit: b3a7bb57476090496b0ae4c6def83f1e171f4339
-  repo_name: ICT-BDA/EasyML
+- commit: 58cd2e8c859bd19834449cfb0ca0f299e0443f33
+  repo_name: adnovum/sonar-build-breaker
+- commit: 653943a3012fe104ff5d226351cebbe52785eba5
+  repo_name: amihaiemil/docker-java-api
+- commit: 59dc148f402da6a8a82ad8604a64fa35d1f70460
+  repo_name: Simmetrics/simmetrics
+- commit: de27ef782e004a1f2bd5bf318c3aa917330c6507
+  repo_name: jclagache/spring-data-mybatis
+- commit: 2a0e7bc66a476e73b6cdbc59c03f056507c4a186
+  repo_name: ebnew/ki4so
+- commit: c570d8e4366474e881fa87610f90fb228b4a981e
+  repo_name: gaul/are-we-consistent-yet
+- commit: dcf718c67c0d403f78ee390c23715c3f5e6f5f4c
+  repo_name: szerhusenBC/jwt-spring-security-demo
+- commit: db08372fa1ac58ca16f718d9741be306ae6a530d
+  repo_name: bucharest-jug/dropwizard-todo
+- commit: 8d6d49393d1453be709ecc4cfe87f41f2081f5c5
+  repo_name: github/maven-plugins
+- commit: ddc0102721275e11669c9be6ac3c2bfe8abc2e13
+  repo_name: rohanpadhye/vasco
+- commit: 99e113f1f71fe800037487a6ae5b2f437935bed7
+  repo_name: davidmoten/rxjava-extras
+- commit: a90cc5c3e080d755ec9bb47923e3dd3dcb24e9c6
+  repo_name: brettwooldridge/HikariJSON
+- commit: 96f4a6fda0fd6b22d6b5c8e15508cc45d57c0c0f
+  repo_name: antkorwin/better-strings
+- commit: 3044c6351bff159a79424755869248f5ace61554
+  repo_name: liuyueyi/quick-alarm
+- commit: 06780d8c0fab139fb20b4deb23fc63decef0fce7
+  repo_name: ragnor/simple-spring-memcached
+- commit: ebc35bd47ba8b124d39629327d7bc0f7ba20bc24
+  repo_name: JakeWharton/RxWindowIfChanged
+- commit: 969af8823c5d9b162ea674731f3f38d437e811f1
+  repo_name: momosecurity/rhizobia_J
+- commit: eaac73406a80ca75fb9423bdf3faada67f955083
+  repo_name: intuit/wasabi
+- commit: ce9ee0cc1852c8fcc000176275293414a9d44a4e
+  repo_name: msanez/sonar-branch-community
+- commit: dad76acd05c6dbcf477cdc2cda2817b4f9bb2d89
+  repo_name: LatencyUtils/LatencyUtils
+- commit: 05659af43697f6dae5743fd0a1931c210757e1e7
+  repo_name: Netflix/Surus
+- commit: 2ec02d06f2fd2082d824183af01e5d4c6cc3bb9b
+  repo_name: spring-attic/authserver
+- commit: f8144e6ebc5c895312c0d49e21ab070b810db426
+  repo_name: JakeWharton/RxRelay
+- commit: 096baf60f3c2cac7b6abe56d574af1226763210f
+  repo_name: demoiselle/framework
+- commit: c6e2f272b3cb99b414bb1e1b0456c9d0f3efe359
+  repo_name: pivotalsoftware/ESarch
+- commit: 1973e402f5d4c1442ad34a1d38ed0758079f7773
+  repo_name: perwendel/spark
+- commit: 517a9b371396dc60d62f1afb1c25e51b0ef0ba20
+  repo_name: JamesZBL/java_design_patterns
+- commit: b1f96e97cb92626e265f20857d973b553953a361
+  repo_name: alibaba/compileflow
+- commit: 4b045ecc73b3ef88cac9074a62b2e212bdaad9b7
+  repo_name: cutting/trevni
+- commit: 747e9913b1cf03da04b302708a4cf3022bfc1728
+  repo_name: jparsec/jparsec
+- commit: d87f125f2023bd71f1caaae684e75199027d75d2
+  repo_name: youngmonkeys/ezyfox-server
+- commit: cc89b036d90403a9c6c98dd13800811a33a48962
+  repo_name: magro/kryo-serializers
+- commit: 8bddb48dae1ec1297c45cd1538ccd472bb85b26e
+  repo_name: inreachventures/aws-signing-request-interceptor
+- commit: 79a61f1594f51912015be1de6c047a87accdcd11
+  repo_name: callicoder/spring-boot-actuator-demo
+- commit: ab22721db79c5f20c0e8483f09eda2844d596557
+  repo_name: brettwooldridge/SansOrm
+- commit: 262d793db60cdc1b2a3ea064d0d9aee264fa2147
+  repo_name: Ardesco/driver-binary-downloader-maven-plugin
+- commit: 0caf6111d5ef4679bf818f99fa448a525566ee69
+  repo_name: jleetutorial/maven-project
+- commit: 7c348c5f3c903e4c629825183de674ba49a8c973
+  repo_name: etsy/statsd-jvm-profiler
+- commit: d2351634f0af0b5129c034fd2facbdfeb4485a37
+  repo_name: anthonyu/KeptCollections
+- commit: 67a42d436811e25f85abe0788120ad9719c5a625
+  repo_name: shazam/shazamcrest
+- commit: 401cb9e51b1b4e14c9350b06f8e0029a34ce6853
+  repo_name: jirutka/spring-rest-exception-handler
+- commit: 645cb63ad4189b06ee787cf64477b918f3541a1d
+  repo_name: anomaly2104/lld-parking-lot
+- commit: 05fa0d4708a81e0860896cc90a52a5b2c867ca54
+  repo_name: virgo47/javasimon
+- commit: 2d41d1f274d4054123250698a596c02ff0b63687
+  repo_name: opendatalab-de/geojson-jackson
+- commit: 7fd6de09581fee0eabf3b95125962bfbcc9e0283
+  repo_name: google/closure-stylesheets
+- commit: 7fa8c085f45977be1db980731f4faf580925db08
+  repo_name: Netflix/curator
+- commit: b4b98d9b59b6abe1919a4b86d3ce9619ff6bdce8
+  repo_name: GoogleCloudPlatform/cloud-opensource-java
+- commit: f8838e23168eb9b0df2e870ba1b5e2eeae77750f
+  repo_name: organicveggie/metrics-statsd
+- commit: a093b7f087e951c62625dc7d00a50ef7b6a7f2e8
+  repo_name: OpenHFT/Zero-Allocation-Hashing
 - commit: 4b9a1ea250647c6eb720d78fb5beeeb9237aa816
   repo_name: rstoyanchev/spring-websocket-portfolio
-- commit: 1b3e7c133ab76a26c9c5b3653679d77d0cd6358d
-  repo_name: DeemOpen/zkui
-- commit: 1e7e110069286fdc5ea1b6a0fd04891b7b6813f5
-  repo_name: WebGoat/WebGoat-Legacy
-- commit: 63806ac71ebd5d9472bf97893b3ec6c5741b5735
-  repo_name: bonnyfone/vectalign
-- commit: a938063de1f822c8d26c8d51ed3871db24355017
-  repo_name: mp911de/logstash-gelf
-- commit: 61e4693355bf1b90a29d27149c0ab6436056ab90
-  repo_name: ESAPI/esapi-java
-- commit: 83ec4eee4c81333311b5fde6a2e94c9f3c563f2e
-  repo_name: qbhy/poster-generater
-- commit: b1dc089161ddec3e5679aca23cf6816f2a266968
-  repo_name: youzan/bugCatcher
-- commit: 5550cd7d50243a46a0a4bb2ee3138b003bf61390
-  repo_name: caozongpeng/SpringBootBlog
-- commit: 6bffde84535bc32cb676a99e3b8d7c3e14894747
-  repo_name: fengjiachun/Jupiter
-- commit: 951d04f352d90f34420a82909c15453fee1b75ff
-  repo_name: coobird/thumbnailator
-- commit: 108cee6b209a362843729c032c2d982625d12d98
-  repo_name: rjeschke/txtmark
