--- a/data/migration_datasets/tiny_dataset.yaml
+++ b/data/migration_datasets/tiny_dataset.yaml
@@ -1,6 +1,6 @@
-- commit: 5aa238cc8ada09e0974760b9e58b6131f1b945a5
-  repo_name: nydiarra/springboot-jwt
-- commit: 2f02edac5c168e14b0a5400bad3b408e176b660b
-  repo_name: alibaba/QLExpress
-- commit: 091af3b8e76c8ba4b5a96aa7151f7da433a717bb
-  repo_name: Ouyangan/hunt-admin
+- commit: 66ae93ad9ac514c79d7821ff90129f1bc1fa0f82
+  repo_name: sonian/elasticsearch-jetty
+- commit: cc89b036d90403a9c6c98dd13800811a33a48962
+  repo_name: magro/kryo-serializers
+- commit: 1dda637edb6fea9d019bc2b921b4dd2a6ffac9f0
+  repo_name: trystan/AsciiPanel
