--- a/java_migration/config/smol_file_tool_21.yaml
+++ b/java_migration/config/smol_file_tool_21.yaml
@@ -1,5 +1,5 @@
 agent_type: smol
 max_num_steps: 100
-tools: [list_dir, maven_install, duckduckgo, stateful_file_tool]
+tools: [list_dir, maven_test, duckduckgo, stateful_file_tool]
 model_name: vertex_ai/gemini-2.0-flash
 prompt: Upgrade the Maven project rooted at the current working dir to use JDK 21. Ensure that the build and the tests pass. You can make source code and dependency changes. You cannot delete or comment-out tests.
