fix repo workspace issue with shallow commits

--- a/data/migration_datasets/full_dataset.yaml
+++ b/data/migration_datasets/full_dataset.yaml
@@ -2574,7 +2574,7 @@
     tests_run: 6
     tests_skipped: 0
     tests_successful: 6
-- commit: N/A
+- commit: 4c92b63a095435011b4590cc25ba05b0582eda70
   license: Apache-2.0
   repo_features:
     number_of_external_dependencies: 8
