--- a/data/migration_datasets/tiny_dataset.yaml
+++ b/data/migration_datasets/tiny_dataset.yaml
@@ -1,42 +1,6 @@
-- commit: 51e74aab9d62b43350f60d2b89976f6d6c4adece
-  license: MIT
-  repo_features:
-    number_of_external_dependencies: 2
-    number_of_java_files: 10
-    number_of_lines_of_code: 2938
-    number_of_modules: 1
-    number_of_unit_tests: 15
-  repo_name: johannburkard/StringSearch
-  test_count:
-    tests_failed: 0
-    tests_run: 69
-    tests_skipped: 0
-    tests_successful: 69
-- commit: 1c549de6f2363d7c296037874cff944de38fb66f
-  license: Apache-2.0
-  repo_features:
-    number_of_external_dependencies: 30
-    number_of_java_files: 102
-    number_of_lines_of_code: 9629
-    number_of_modules: 5
-    number_of_unit_tests: 350
-  repo_name: Comcast/jrugged
-  test_count:
-    tests_failed: 0
-    tests_run: 350
-    tests_skipped: 0
-    tests_successful: 350
-- commit: c7450c5e861d099a98a59825d0c7b45c6fd65116
-  license: Apache-2.0
-  repo_features:
-    number_of_external_dependencies: 19
-    number_of_java_files: 42
-    number_of_lines_of_code: 6129
-    number_of_modules: 2
-    number_of_unit_tests: 386
-  repo_name: aws/aws-dynamodb-encryption-java
-  test_count:
-    tests_failed: 0
-    tests_run: 256
-    tests_skipped: 0
-    tests_successful: 256
+- commit: 5aa238cc8ada09e0974760b9e58b6131f1b945a5
+  repo_name: nydiarra/springboot-jwt
+- commit: 2f02edac5c168e14b0a5400bad3b408e176b660b
+  repo_name: alibaba/QLExpress
+- commit: 091af3b8e76c8ba4b5a96aa7151f7da433a717bb
+  repo_name: Ouyangan/hunt-admin
